--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,8 +10,15 @@ add_subdirectory(utils)
 add_subdirectory(bench)
 add_subdirectory(unittests)
 
+set(targets evmone-bench evmone-unittests testutils)
+
+if(EVMONE_FUZZING)
+    add_subdirectory(fuzzer)
+    list(APPEND targets evmone-fuzzer)
+endif()
+
 set_target_properties(
-    evmone-bench evmone-unittests testutils PROPERTIES
+    ${targets} PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}
