--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 
 option(BUILD_SHARED_LIBS "Build evmone as a shared library" ON)
 option(EVMONE_TESTING "Build tests and test tools" OFF)
+option(EVMONE_FUZZING "Instrument libraries and build fuzzing tools" OFF)
 
 include(cmake/cable/bootstrap.cmake)
 include(CableBuildType)
@@ -42,6 +43,14 @@ if(CABLE_COMPILER_GNULIKE)
 elseif(MSVC)
     add_compile_options(/wd4324)  # Disabled warning about alignment caused by alignas.
     add_compile_options(/wd5030)  # Allow using unknown attributes.
+endif()
+
+if(EVMONE_FUZZING)
+    set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build evmone as a shared library" FORCE)
+    set(EVMONE_TESTING ON CACHE BOOL "Build tests and test tools" FORCE)
+    set(fuzzing_flags -fsanitize=fuzzer-no-link,undefined,address)
+    add_compile_options(${fuzzing_flags})
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${fuzzing_flags}")
 endif()
 
 set(include_dir ${CMAKE_CURRENT_SOURCE_DIR}/include)
