fuzzer: Add option to generate code coverage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,11 +46,18 @@ elseif(MSVC)
 endif()
 
 if(EVMONE_FUZZING)
+    option(EVMONE_FUZZING_COVERAGE "Fuzzing coverage" OFF)
+
     set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build evmone as a shared library" FORCE)
     set(EVMONE_TESTING ON CACHE BOOL "Build tests and test tools" FORCE)
-    set(fuzzing_flags -fsanitize=fuzzer-no-link,undefined,address)
-    add_compile_options(${fuzzing_flags})
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${fuzzing_flags}")
+
+    if(EVMONE_FUZZING_COVERAGE)
+        add_compile_options(-fprofile-instr-generate -fcoverage-mapping)
+    else()
+        set(fuzzing_flags -fsanitize=fuzzer-no-link,undefined,address)
+        add_compile_options(${fuzzing_flags})
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${fuzzing_flags}")
+    endif()
 endif()
 
 set(include_dir ${CMAKE_CURRENT_SOURCE_DIR}/include)
