fuzzer: Workaround Aleth being built all the time

--- a/test/fuzzer/CMakeLists.txt
+++ b/test/fuzzer/CMakeLists.txt
@@ -21,22 +21,33 @@ if(NOT EVMONE_FUZZING_COVERAGE)
     # TODO: Aleth reports undefined behaviors, disable it for fuzzing.
     string(REPLACE undefined "" aleth_fuzzing_flags ${fuzzing_flags})
 
+    set(aleth_git_tag master)
+    if(NOT aleth_git_tag STREQUAL "${aleth_current_git_tag}")
+        message(STATUS "Aleth git tag has changed: ${aleth_current_git_tag} -> ${aleth_git_tag}")
+        set(aleth_current_git_tag ${aleth_git_tag} CACHE INTERNAL "Current Aleth git tag" FORCE)
+    else()
+        message(STATUS "Aleth git tag: ${aleth_git_tag}; updates disabled")
+        set(aleth_disable_git_update UPDATE_COMMAND "")
+    endif()
+
+
     ExternalProject_Add(
         aleth-interpreter
         PREFIX external
         EXCLUDE_FROM_ALL TRUE
 
         GIT_REPOSITORY https://github.com/ethereum/aleth
-        GIT_TAG aleth-interpreter
+        GIT_TAG ${aleth_git_tag}
         GIT_SUBMODULES evmc cmake/cable
         GIT_SHALLOW TRUE
+        "${aleth_disable_git_update}"
 
         CMAKE_ARGS
-            -DCMAKE_BUILD_TYPE=Release
-            -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
-            -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
-            -DCMAKE_CXX_FLAGS=${aleth_fuzzing_flags}
-            -DCMAKE_C_FLAGS=${aleth_fuzzing_flags}
+        -DCMAKE_BUILD_TYPE=Release
+        -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
+        -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+        -DCMAKE_CXX_FLAGS=${aleth_fuzzing_flags}
+        -DCMAKE_C_FLAGS=${aleth_fuzzing_flags}
 
         BUILD_COMMAND ${CMAKE_COMMAND} --build <BINARY_DIR> --target aleth-interpreter
         INSTALL_COMMAND ""
